--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,7 +69,7 @@ jobs:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      # Checkout code from git
+      - checkout # Checkout code from git
       # Restore from cache
       # Your job code here
       - run:
@@ -79,7 +79,7 @@ jobs:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      # Checkout code from git
+      - checkout # Checkout code from git
       # Restore from cache
       # Your job code here
       - run:
@@ -89,7 +89,7 @@ jobs:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      # Checkout code from git
+      - checkout # Checkout code from git
       # Restore from cache
       # Your job code here
       - run:
@@ -99,7 +99,7 @@ jobs:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      # Checkout code from git
+      - checkout # Checkout code from git
       # Restore from cache
       # Your job code here
       - run:
@@ -109,7 +109,7 @@ jobs:
     docker:
       - image: amazon/aws-cli:2.1.16
     steps:
-      # Checkout code from git
+      - checkout # Checkout code from git
       - run:
           name: Ensure back-end infrastructure exists
           command: |
@@ -143,7 +143,7 @@ jobs:
     docker:
       - image: ansible/ansible-runner
     steps:
-      # Checkout code from git
+      - checkout # Checkout code from git
       # Add ssh keys with fingerprint
       # attach workspace
       - run:
@@ -162,7 +162,7 @@ jobs:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      # Checkout code from git
+      - checkout # Checkout code from git
       - run:
           name: Run migrations
           command: |
@@ -179,7 +179,7 @@ jobs:
     docker:
       - image: amazon/aws-cli:2.1.16
     steps:
-      # Checkout code from git
+      - checkout # Checkout code from git
       - run:
           name: Install dependencies
           command: |
@@ -202,7 +202,7 @@ jobs:
     docker:
       - image: ansible/ansible-runner
     steps:
-      # Checkout code from git
+      - checkout # Checkout code from git
       # Add ssh keys with fingerprint
       # attach workspace
       - run:
@@ -221,7 +221,7 @@ jobs:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      # Checkout code from git
+      - checkout # Checkout code from git
       - run:
           name: Install dependencies
           command: |
@@ -248,7 +248,7 @@ jobs:
     docker:
       - image: amazon/aws-cli:2.1.16
     steps:
-      # Checkout code from git
+      - checkout # Checkout code from git
       - run:
           name: Install dependencies
           command: |
@@ -261,11 +261,11 @@ jobs:
             exit 1
       # Here's where you will add some code to rollback on failure  
 
-cleanup:
+  cleanup:
     docker:
       - image: amazon/aws-cli:2.1.16
     steps:
-      # Checkout code from git
+      - checkout # Checkout code from git
       - run:
           name: Get old stack workflow id
           command: |
