--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,7 @@ jobs:
           name: Build front-end
           working_directory: ./frontend
           command: |
+            npm install
             npm run build
       - save_cache:
           paths: [frontend/node_modules]
@@ -60,6 +61,7 @@ jobs:
           name: Back-end build
           working_directory: ./backend
           command: |
+            npm install
             npm run build
       - save_cache:
           paths: [backend/node_modules]
