add npm install to test frontend

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,7 +78,7 @@ jobs:
       - run:
           name: test-frontend
           working_directory: ./frontend
-          command: npm test
+          command: npm install test
                 
   test-backend:
     docker:
