--- a/.circleci/files/cloudfront.yml
+++ b/.circleci/files/cloudfront.yml
@@ -6,7 +6,6 @@ Parameters:
     Description: Unique identifier.
     Type: String
 
-
 Resources:
   
   CloudFrontOriginAccessIdentity:
@@ -23,7 +22,9 @@ Resources:
           - DomainName: !Sub "udapeople-${WorkflowID}.s3.amazonaws.com"
             Id: webpage
             S3OriginConfig:
-              OriginAccessIdentity: !Sub "origin-access-identity/cloudfront/${CloudFrontOriginAccessIdentity}"
+              OriginAccessIdentity: !Sub 
+               - origin-access-identity/cloudfront/${CloudFrontOriginAccessIdentity}
+               - { CloudFrontOriginAccessIdentity: !Ref CloudFrontOriginAccessIdentity }
         Enabled: True
         DefaultRootObject: index.html
         DefaultCacheBehavior:
