--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -133,8 +133,8 @@ jobs:
     steps:
       - checkout # Checkout code from git
       - run:
-          name: Install utilities
-          command: yum install -y tar
+          name: Install utilities tar and gzip
+          command: yum install -y tar gzip 
       - run:
           name: Ensure back-end infrastructure exists
           command: |
@@ -173,8 +173,8 @@ jobs:
           paths:
             - project/.circleci/ansible/inventory.txt
       # Here's where you will add some code to rollback on failure      
-      - destroy-environment:
-          id: ${CIRCLE_WORKFLOW_ID:0:7}
+      #- destroy-environment:
+      #    id: ${CIRCLE_WORKFLOW_ID:0:7}
 
   configure-infrastructure:
     docker:
