--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -162,12 +162,15 @@ jobs:
               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  
       - run:
           name: Add back-end ip to ansible inventory
+          working_directory: ./.circleci/ansible
           command: |
-            aws ec2 describe-instances \
+            BACKEND_IP=$(aws ec2 describe-instances \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --filters "Name=tag:project,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --output text >> .circleci/ansible/inventory.txt
-            cat .circleci/ansible/inventory.txt
+              --output text)
+            echo "BACKEND IP: ${BACKEND_IP}"
+            echo "${BACKEND_IP}" >> inventory.txt
+            cat inventory.txt
       - persist_to_workspace:
           root: ~/
           paths:
