--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -185,19 +185,30 @@ jobs:
     steps:
       - checkout # Checkout code from git
       # Add ssh keys with fingerprint
+      - add_ssh_keys:
+          fingerprints: ["31:ba:95:73:af:5d:f4:40:fa:aa:64:1d:05:25:a4:59"]
       # attach workspace
+      - attach_workspace:
+          at: ~/
       - run:
           name: Install dependencies
+          working_directory: ./.circleci/ansible
           command: |
-            # Your code here
-            exit 1
+            apk add --update ansible
+            ansible --version
       - run:
           name: Configure server
+          working_directory: ./.circleci/ansible
           command: |
             # Your code here
-            exit 1
+            whoami
+            pwd
+            ls -l
+            cat inventory.txt
+            ansible-playbook -i inventory.txt configure-server.yaml
       # Here's where you will add some code to rollback on failure      
-
+      #- destroy-environment:
+      #    id: ${CIRCLE_WORKFLOW_ID:0:7}
   run-migrations:
     docker:
       - image: circleci/node:13.8.0
