--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -181,7 +181,7 @@ jobs:
 
   configure-infrastructure:
     docker:
-      - image: ansible/ansible-runner
+      - image: python
     steps:
       - checkout # Checkout code from git
       # Add ssh keys with fingerprint
