--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -214,8 +214,9 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - checkout # Checkout code from git
-      - attach_workspace:
-          at: .
+      # Restore backend from cache
+      - restore_cache:
+          keys: [backend-build]
       - run:
           name: Run migrations
           working_directory: ./backend
@@ -232,6 +233,7 @@ jobs:
               echo "run-migration has been executed successfully, sending 'ok' to Memstash udapeople-migration_${CIRCLE_WORKFLOW_ID}"; 
               curl -H "Content-Type: text/plain" -H "token: ${MEMSTASH_TOKEN}" --request PUT --data "ok" https://api.memstash.io/values/udapeople-migration_${CIRCLE_WORKFLOW_ID}
             else 
+              cat migration_status
               echo "run-migration failed, sending 'fail' to Memstash udapeople-migration_${CIRCLE_WORKFLOW_ID}"; 
               curl -H "Content-Type: text/plain" -H "token: ${MEMSTASH_TOKEN}" --request PUT --data "fail" https://api.memstash.io/values/udapeople-migration_${CIRCLE_WORKFLOW_ID}
             fi
