install nodejs for deploy-frontend

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -259,7 +259,8 @@ jobs:
           name: Install dependencies
           command: |
             # your code here
-            echo "dependencies"
+            echo "install nodejs and npm"
+            yum install -y nodejs npm
       - run:
           name: Get backend url
           command: |
