--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -262,8 +262,13 @@ jobs:
             # your code here
             echo "install nodejs and npm"
             yum update -y
-            yum install -y epel-release
+            yum install -y wget
+            cd /tmp
+            wget https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
+            yum install -y epel-release-latest-7.noarch.rpm
             yum install -y nodejs npm
+            node --version
+            npm --version
       - run:
           name: Get backend url
           command: |
