restore frontend cache

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -256,6 +256,8 @@ jobs:
       - image: amazon/aws-cli:2.1.16
     steps:
       - checkout # Checkout code from git
+      - restore_cache:
+          keys: [frontend-build]
       - run:
           name: Install dependencies
           working_directory: /tmp
