--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -256,8 +256,6 @@ jobs:
       - image: amazon/aws-cli:2.1.16
     steps:
       - checkout # Checkout code from git
-      - restore_cache:
-          keys: [frontend-build]
       - run:
           name: Install dependencies
           working_directory: /tmp
@@ -282,6 +280,7 @@ jobs:
           working_directory: ./frontend
           command: |
             # your code here
+            npm install
             npm run build
             aws s3 cp ./dist "s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7}" --recursive
       # Here's where you will add some code to rollback on failure      
