--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -272,6 +272,10 @@ jobs:
       - image: amazon/aws-cli:2.1.16
     steps:
       - checkout # Checkout code from git
+      - run:
+          name: Install utilities tar and gzip
+          command: |
+            yum install -y tar gzip 
       - restore_cache:
           keys: [frontend-dist]
       - run:
