--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -283,6 +283,8 @@ jobs:
           working_directory: ./frontend
           command: |
             # your code here
+            pwd
+            ls -l
             aws s3 cp ./dist "s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7}" --recursive
       # Here's where you will add some code to rollback on failure      
                     
