--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -280,12 +280,10 @@ jobs:
           keys: [frontend-dist]
       - run:
           name: Deploy frontend objects
-          working_directory: ./frontend
           command: |
             # your code here
-            pwd
-            ls -l
-            aws s3 cp ./dist "s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7}" --recursive
+            ls -l /home/circleci/project/frontend/dist
+            aws s3 cp /home/circleci/project/frontend/dist "s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7}" --recursive
       # Here's where you will add some code to rollback on failure      
                     
   deploy-backend:
