--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,4 +1,5 @@
 - name: create the application folder
+  become: yes
   ansible.builtin.file:
     path: /opt/udapeople/backend
     state: directory
