--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -5,6 +5,13 @@
     state: directory
     mode: '0755'
 
+- name: "Install rsync"
+  become: yes
+  apt:
+    update_cache: yes
+    name: ["rsync"]
+    state: latest
+
 - name: copy backend dist
   become: yes
   synchronize:
