use copy instead of synchronize

--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -14,17 +14,15 @@
 
 - name: copy backend dist
   become: yes
-  synchronize:
+  copy:
     src: ../../backend/dist
     dest: /opt/udapeople/backend
-    recursive: true
 
 - name: copy backend node_modules
   become: yes
-  synchronize:
+  copy:
     src: ../../backend/node_modules
     dest: /opt/udapeople/backend
-    recursive: true
 
 - name: start PM2 service
   become: yes
