--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,8 +72,11 @@ jobs:
             npm install
             npm run build
       - save_cache:
-          paths: [backend/node_modules, backend/dist]
+          paths: [backend/node_modules]
           key: backend-build
+      - save_cache:
+          paths: [backend/dist]
+          key: backend-dist
       - store_artifacts:
           path: backend/dist
 
@@ -297,7 +300,7 @@ jobs:
           fingerprints: ["31:ba:95:73:af:5d:f4:40:fa:aa:64:1d:05:25:a4:59"]
       # Restore from cache
       - restore_cache:
-          keys: [backend-build]
+          keys: [backend-build, backend-dist]
       # attach workspace
       - attach_workspace:
           at: ~/
@@ -314,6 +317,7 @@ jobs:
             # your code here
             pwd
             ls -l
+            tree /home/circleci/project/backend/
             cat inventory.txt            
             #ansible-playbook -v -i inventory.txt deploy-backend.yml
       # Here's where you will add some code to rollback on failure  
