--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -5,11 +5,15 @@
     state: directory
     mode: '0755'
 
-- name: copy backend dist
-  become: yes
-  copy:
-    src: /home/circleci/project/backend/dist
-    dest: /opt/udapeople/backend
+- name: archive backend dist
+  archive:
+    path: /home/circleci/project/backend/dist
+    dest: /home/circleci/project/backend/dist.tgz
+
+- name: extract dist.tgz to the remote folder
+  unarchive:
+    src: /home/circleci/project/backend/dist.tgz
+    dest: /opt/udapeople/backend/
 
 - name: start PM2 service
   become: yes
