archive locally extract remotely

--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -9,7 +9,7 @@
   become: yes
   apt:
     update_cache: yes
-    name: ["nodejs", "npm"]
+    name: ["nodejs", "npm", "tar", "gzip"]
     state: latest
 
 - name: "Install PM2"
